correction of creating edge list